# bookstore

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
bookstore/: settings.py  urls.py
order/: tests.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_viewsets/: test_order_viewset.py
product/: tests.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
